kfdefs/base/monitoring/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alert-manager
spec:
  ports:
    - name: web
      port: 9093
      protocol: TCP
      targetPort: web
  selector:
    app: alertmanager
